[metadata]
name = derange
version = attr:derange.__version__
description = Compress lists of integers to range objects
long_description = file:README.rst
long_description_content_type = text/x-rst
author = John Thorvald Wodder II
author_email = derange@varonathe.org
license = MIT
license_files = LICENSE
url = https://github.com/jwodder/derange

keywords =
    range
    interval
    compression
    consecutive
    sequential
    sorting
    distribution sort
    gaps and islands
    streak
    sparse array
    connected component

classifiers =
    Development Status :: 4 - Beta
    #Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: MIT License
    Topic :: Utilities

project_urls =
    Source Code = https://github.com/jwodder/derange
    Bug Tracker = https://github.com/jwodder/derange/issues

[options]
py_modules = derange
package_dir =
    =src
python_requires = ~=3.6
install_requires =
