[metadata]
name = derange
version = attr:derange.__version__
description = Compress lists of integers to range objects
long_description = file:README.rst
long_description_content_type = text/x-rst
author = John Thorvald Wodder II
author_email = derange@varonathe.org
license = MIT
license_files = LICENSE
url = https://github.com/jwodder/derange

keywords =
    range
    interval
    compression
    consecutive
    sequential
    sorting
    distribution sort
    gaps and islands
    streak
    sparse array
    connected component

classifiers =
    Development Status :: 4 - Beta
    #Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: MIT License
    Topic :: Utilities
    Typing :: Typed

project_urls =
    Source Code = https://github.com/jwodder/derange
    Bug Tracker = https://github.com/jwodder/derange/issues

[options]
packages = find:
package_dir =
    =src
include_package_data = True
python_requires = ~=3.7

[options.packages.find]
where = src

[mypy]
ignore_missing_imports = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
no_implicit_optional = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
local_partial_types = True
no_implicit_reexport = True
strict_equality = True
show_error_codes = True
show_traceback = True
pretty = True
